// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordUpdateForm stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-8 max-w-2xl"
  >
    <div
      class="w-full"
    >
      <form
        data-testid="password-update-form"
      >
        <div
          class="space-y-4"
        >
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_0_-form-item"
            >
              Current Password
            </label>
            <input
              aria-describedby="_r_0_-form-item-description"
              aria-invalid="false"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_0_-form-item"
              name="currentPassword"
              placeholder="Enter your current password"
              type="password"
              value=""
            />
          </div>
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_1_-form-item"
            >
              New Password
            </label>
            <input
              aria-describedby="_r_1_-form-item-description"
              aria-invalid="false"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_1_-form-item"
              name="password"
              placeholder="Enter your new password"
              type="password"
              value=""
            />
          </div>
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_2_-form-item"
            >
              Confirm New Password
            </label>
            <input
              aria-describedby="_r_2_-form-item-description"
              aria-invalid="false"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_2_-form-item"
              name="confirmPassword"
              placeholder="Confirm your new password"
              type="password"
              value=""
            />
          </div>
          <div
            class="space-y-2"
          >
            <p
              aria-level="4"
              class="text-sm font-medium text-foreground"
              role="heading"
            >
              Password Requirements
            </p>
            <div
              class="space-y-1.5"
            >
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least 8 characters
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one uppercase letter
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one lowercase letter
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one number
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one special character
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex gap-3 pt-2 justify-center"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-9 py-2 has-[>svg]:px-3 rounded-md bg-primary hover:bg-primary/90 text-primary-foreground px-6"
              data-size="default"
              data-slot="button"
              data-variant="default"
              type="submit"
            >
              Save
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`PasswordUpdateForm stories snapshot > Interactive story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-8 max-w-2xl"
  >
    <div
      class="w-full"
    >
      <form
        data-testid="password-update-form"
      >
        <div
          class="space-y-4"
        >
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_6_-form-item"
            >
              Current Password
            </label>
            <input
              aria-describedby="_r_6_-form-item-description"
              aria-invalid="false"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_6_-form-item"
              name="currentPassword"
              placeholder="Enter your current password"
              type="password"
              value=""
            />
          </div>
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_7_-form-item"
            >
              New Password
            </label>
            <input
              aria-describedby="_r_7_-form-item-description"
              aria-invalid="false"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_7_-form-item"
              name="password"
              placeholder="Enter your new password"
              type="password"
              value=""
            />
          </div>
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_8_-form-item"
            >
              Confirm New Password
            </label>
            <input
              aria-describedby="_r_8_-form-item-description"
              aria-invalid="false"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_8_-form-item"
              name="confirmPassword"
              placeholder="Confirm your new password"
              type="password"
              value=""
            />
          </div>
          <div
            class="space-y-2"
          >
            <p
              aria-level="4"
              class="text-sm font-medium text-foreground"
              role="heading"
            >
              Password Requirements
            </p>
            <div
              class="space-y-1.5"
            >
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least 8 characters
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one uppercase letter
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one lowercase letter
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one number
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one special character
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex gap-3 pt-2 justify-center"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-9 py-2 has-[>svg]:px-3 rounded-md bg-primary hover:bg-primary/90 text-primary-foreground px-6"
              data-size="default"
              data-slot="button"
              data-variant="default"
              type="submit"
            >
              Save
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`PasswordUpdateForm stories snapshot > WithInitialData story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-8 max-w-2xl"
  >
    <div
      class="w-full"
    >
      <form
        data-testid="password-update-form"
      >
        <div
          class="space-y-4"
        >
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_3_-form-item"
            >
              Current Password
            </label>
            <input
              aria-describedby="_r_3_-form-item-description"
              aria-invalid="false"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_3_-form-item"
              name="currentPassword"
              placeholder="Enter your current password"
              type="password"
              value="OldPassword123"
            />
          </div>
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_4_-form-item"
            >
              New Password
            </label>
            <input
              aria-describedby="_r_4_-form-item-description"
              aria-invalid="false"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_4_-form-item"
              name="password"
              placeholder="Enter your new password"
              type="password"
              value="NewPassword123!"
            />
          </div>
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_5_-form-item"
            >
              Confirm New Password
            </label>
            <input
              aria-describedby="_r_5_-form-item-description"
              aria-invalid="false"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_5_-form-item"
              name="confirmPassword"
              placeholder="Confirm your new password"
              type="password"
              value="NewPassword123!"
            />
          </div>
          <div
            class="space-y-2"
          >
            <p
              aria-level="4"
              class="text-sm font-medium text-foreground"
              role="heading"
            >
              Password Requirements
            </p>
            <div
              class="space-y-1.5"
            >
              <div
                class="flex items-center gap-2 text-sm transition-colors text-primary"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check h-4 w-4 text-primary"
                  data-testid="check-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
                <span>
                  At least 8 characters
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-primary"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check h-4 w-4 text-primary"
                  data-testid="check-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
                <span>
                  At least one uppercase letter
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-primary"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check h-4 w-4 text-primary"
                  data-testid="check-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
                <span>
                  At least one lowercase letter
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-primary"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check h-4 w-4 text-primary"
                  data-testid="check-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
                <span>
                  At least one number
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-primary"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check h-4 w-4 text-primary"
                  data-testid="check-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
                <span>
                  At least one special character
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex gap-3 pt-2 justify-center"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-9 py-2 has-[>svg]:px-3 rounded-md bg-primary hover:bg-primary/90 text-primary-foreground px-6"
              data-size="default"
              data-slot="button"
              data-variant="default"
              type="submit"
            >
              Save
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
